<resources>
    <string name="app_name">JuanmasEatItServer</string>
    <string name="slogan">Impulsa tu restaurante al siguiente nivel. Conecta con clientes hambrientos y amplía tus horizontes culinarios</string>
    <string name="sign_up">Registrarse</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <!--<string name="menu_gallery">Gallery</string>-->
    <string name="menu_slideshow">Pedidos</string>
    <string name="menu">Menu</string>
    <string name="carro">Carro</string>
    <string name="pedidos">Pedidos</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="recu_rdame">Recuérdame</string>
    <string name="forgot_pwd">¿Olvidó su contraseña?</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
</resources>