<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/baseline_restaurant_24"
            android:title="@string/menu" />

        <!--<item
            android:id="@+id/nav_cart"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/carro" />-->

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/baseline_access_time_24"
            android:title="@string/pedidos" />

        <item
            android:id="@+id/nav_change_pwd"
            android:icon="@drawable/baseline_security_24"
            android:iconTint="@android:color/white"
            android:title="@string/cambiar_contrase_a" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:title="@string/cerrar_sesi_n" />
    </group>
</menu>